--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div style="margin:20%">
-        <h1>Nothing to do here</h1>
+        <h1>Nothing to do here. Headover <a href="http://localhost:3000">here</a> and submit your poem idea</h1>
     </div>
 </body>
